# MeshEngine

./: .dockerignore  .gitignore  BUILD.md  CMakeLists.txt  Dockerfile  README.md  build.bat  build.sh  build_docker.sh  docker-compose.yml  vcpkg.json
include/: Application.h  Camera.h  Line.h  Point.h  Renderer.h  Scene.h  Shader.h  UIComponent.h
include/KHR/: khrplatform.h
include/include/glad/: gl.h
src/: Application.cpp  Camera.cpp  Line.cpp  Point.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  UIComponent.cpp  glad.c  main.cpp
